# ld51

./: Cargo.toml  LICENSE  README.md  index.html  ld51-412e2d19c2332a7b.js  ld51-730076994345d417.js  ld51-7e1432f37eb1bb42.js  ld51-d359b1686e738670.js
.github/workflows/: release.yaml
assets/: snail_idle.ron
sources/: snail_animations.tps
src/: components.rs  end_menu.rs  input.rs  lobby.rs  main.rs  race.rs
