[package]
name = "ld51"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benimator = "4.0.0"
bevy = { version = "0.8.1", features = [] }
bevy_asset_loader = { version = "0.12.1", features = ["stageless"] }
iyes_loopless = "0.7.1"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3