[package]
name = "ld51"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benimator = "4.0.0"
bevy = { version = "0.8.1" }
bevy-web-resizer = "3.0.0"
bevy_asset_loader = { version = "0.12.1" }
bevy_ggrs = "0.10.0"
console_error_panic_hook = "0.1.7"
ggrs = "0.9.2"
matchbox_socket = { version = "0.3.0", features = ["ggrs-socket"] }
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_ggrs = { version = "0.10.0", features = ["wasm-bindgen"] }
ggrs = { version = "0.9.2", features = ["wasm-bindgen"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", branch = "main" }
