[package]
name = "snails_pace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benimator = "4.0.0"
bevy = { version = "0.8.1" }
bevy-web-resizer = "3.0.0"
bevy_asset_loader = { version = "0.12.1" }
bevy_heterogeneous_texture_atlas_loader = "0.7.1"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3